--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
   <div class="wrapper">
+    <div class="author">
+      <h1>Etch-A-Sketch</h1>
+      <h3>made by Gregory Starodubcev</h3>
+    </div>
     <div class="ipad-container">
       <div class="ipad-screen">
           <div class="camera"></div>
