Implemented borders removal. Changed the draw method.

--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
                   <button class="ipad-screen-menu__btn ipad-screen-menu__btn--grid" type="button"></button>
                 </li>
                 <li class="ipad-screen-menu__item">
-                  <button class="ipad-screen-menu__btn ipad-screen-menu__btn--eraser" type="button"></button>
+                  <button class="ipad-screen-menu__btn ipad-screen-menu__btn--borders" type="button"></button>
                 </li>
                 <li class="ipad-screen-menu__item">
                   <button class="ipad-screen-menu__btn ipad-screen-menu__btn--palette" type="button"></button>
                 </li>
                 <li class="ipad-screen-menu__item">
                   <button class="ipad-screen-menu__btn ipad-screen-menu__btn--die" type="button"></button>
+                </li>
+                <li class="ipad-screen-menu__item">
+                  <button class="ipad-screen-menu__btn ipad-screen-menu__btn--eraser" type="button"></button>
                 </li>
               </ul>
             </div>
